Added Swagger Documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,11 @@ spring.output.ansi.enabled=always
 logging.file.path=logs/
 logging.file.name=logs/application.log
 
+# SWAGGER DOCUMENTATION
+service.openapi.dev-url=http://localhost:1707/api
+service.openapi.prod-url=https://kirra-api.com
+# spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 # LAIN-LAIN
 spring.mvc.servlet.load-on-startup=1
 server.error.include-stacktrace=never
