--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,15 +10,18 @@ jwtRefreshExpirationMs= 86400000
 
 # DATABASE CONFIG
 spring.datasource.url=jdbc:postgresql://localhost:5432/PROTOTYPE_DB
+# spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/SERVICE_DB?sslmode=require
+# spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/SERVICE_DB?useSSL=false&useTimezone=true&serverTimezone=UTC
+# spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/SERVICE_DB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
+ 
 # JPA CONFIG
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 # Untuk Prod spring.jpa.hibernate.ddl-auto=None
-# spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
